src/js/components/globalStyles.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap');

html,body{
    font-family: 'Ubuntu', sans-serif;
    width: 100vw;
    height: 100vh;
}

a{
    text-decoration: none;
}

.text-shadow{
    text-shadow: 4px 4px 10px #000000
}

